# onixs-nats-pub

./: .gitignore  CMakeLists.txt  README.md  main.cpp  publisher.h
resources/: config.xml
src/: CMakeLists.txt  connection.h  main.cpp  publisher.h
